syntax = "proto3";

package kritor.common;

option csharp_namespace = "Kritor.Common";
option java_multiple_files = true;
option java_package = "io.kritor.common";
option go_package = "grpc/kritor/common";

import "Protos/common/contact.proto";
import "Protos/common/message_element.proto";

message PushMessageBody {
  uint32 time = 1;
  string message_id = 2;
  uint64 message_seq = 3;
  Contact contact = 4;           // 从什么地方收到的信息
  Sender sender = 5;             // 发送者详细信息
  repeated Element elements = 6; // 发的什么东西
}

message ForwardMessageBody {
  oneof forward_message {
    string message_id = 1;
    PushMessageBody message = 2;
  }
}

message EssenceMessageBody {
  uint32 group_id = 1;
  string sender_uid = 2;
  uint64 sender_uin = 3;
  string sender_nick = 4;
  uint64 operator_uid = 5;
  uint64 operator_uin = 6;
  string operator_nick = 7;
  uint32 operation_time = 8;
  uint32 message_time = 9;
  string message_id = 10;
  uint64 message_seq = 11;
  string json_elements = 12;
}