syntax = "proto3";

package kritor.file;

option csharp_namespace = "Kritor.File";
option java_multiple_files = true;
option java_package = "io.kritor.file";
option go_package = "grpc/kritor/file";

message File {
  string file_id = 1;
  string file_name = 2;
  uint64 file_size = 3;
  int32 bus_id = 4;
  uint32 upload_time = 5;
  uint32 dead_time = 6;
  uint32 modify_time = 7;
  uint32 download_times = 8;
  uint64 uploader = 9;
  string uploader_name = 10;
  string sha = 11;
  string sha3 = 12;
  string md5 = 13;
}

message Folder {
  string folder_id = 1;
  string folder_name = 2;
  uint32 total_file_count = 3;
  uint32 create_time = 4;
  uint64 creator = 5;
  string creator_name = 6;
}
